B-68612 Tech Debt: FDA: replace Collections.singletonList() by List.of().  In dist-foreign-service package.