@@ -119,7 +119,7 @@ public class AclGrantDetailServiceTest {
 
     @Test
     public void testGetDtos() {
-        List<AclGrantDetailDto> grantDetails = Collections.singletonList(new AclGrantDetailDto());
+        List<AclGrantDetailDto> grantDetails = List.of(new AclGrantDetailDto());
         Pageable pageable = new Pageable(0, 1);
         Sort sort = new Sort("licenseType", Sort.Direction.ASC);
         AclGrantDetailFilter filter = new AclGrantDetailFilter();
@@ -355,7 +355,7 @@ public class AclGrantDetailServiceTest {
         expect(RupContextUtils.getUserName()).andReturn(USER_NAME).once();
         String sourceGrantSetId = "22552173-acfe-45d5-a026-3ded88e38266";
         String targetGrantSetId = "65f9c87a-cd1e-4854-a76e-cbbeb2122d3c";
-        List<String> grantDetailIds = Collections.singletonList("47388a61-7aa7-439b-a831-d3dfb4a69638");
+        List<String> grantDetailIds = List.of("47388a61-7aa7-439b-a831-d3dfb4a69638");
         expect(aclGrantDetailRepository.copyGrantDetailsByGrantSetId(sourceGrantSetId, targetGrantSetId, USER_NAME))
             .andReturn(grantDetailIds);
         expectLastCall().once();
