@@ -20,7 +20,6 @@ import org.junit.Before;
 import org.junit.Test;
 import org.powermock.reflect.Whitebox;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.function.Predicate;
@@ -78,7 +77,7 @@ public class FasRightsConsumerTest {
     private void testConsume(String productFamily, Long foundRhAccountNumber, boolean expectedPredicateResult) {
         Whitebox.setInternalState(fasRightsConsumer, new RightsServiceMock(foundRhAccountNumber));
         Usage usage = buildUsage(productFamily);
-        List<Usage> usages = Collections.singletonList(usage);
+        List<Usage> usages = List.of(usage);
         Capture<Predicate<Usage>> predicateCapture = newCapture();
         fasRightsProcessor.executeNextChainProcessor(eq(usages), capture(predicateCapture));
         expectLastCall().once();
