@@ -66,8 +66,7 @@ public class CreateSalScenarioIntegrationTest {
             .withScenario(SCENARIO_NAME, SCENARIO_DESCRIPTION, buildSalFields())
             .expectScenario(buildExpectedScenario())
             .expectScenarioFilter(new ScenarioUsageFilter(buildUsageFilter()))
-            .expectScenarioAudit(Collections.singletonList(
-                Pair.of(ScenarioActionTypeEnum.ADDED_USAGES, StringUtils.EMPTY)))
+            .expectScenarioAudit(List.of(Pair.of(ScenarioActionTypeEnum.ADDED_USAGES, StringUtils.EMPTY)))
             .expectUsages("usage/sal/sal_expected_usages_for_create_scenario.json")
             .build()
             .run();
